--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
+  flutter_secure_storage:
 
   flutter:
     sdk: flutter
