--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   flutter_secure_storage:
+  get:
+  dio:
+  another_flushbar: 
 
   flutter:
     sdk: flutter
