--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
   flutter_secure_storage:
-  get:
+  get: ^4.6.5
   dio:
   another_flushbar: 
   flutter_highlight:
@@ -51,6 +51,8 @@ dependencies:
   http:
   collection: ^1.17.0
   transparent_image: ^2.0.1
+  cached_network_image: ^3.2.3
+  shared_preferences: ^2.2.0
   
 
 dev_dependencies:
