--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   transparent_image: ^2.0.1
   cached_network_image: ^3.2.3
   shared_preferences: ^2.2.0
+  boxicons: ^2.1.3
+  flutter_boxicons: ^3.0.0
+  intl: ^0.18.1
   
 
 dev_dependencies:
