basic pages UI done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_boxicons: ^3.0.0
   intl: ^0.18.1
   shimmer_effect: ^1.0.4
+  image_picker: ^0.8.7+5
   
 
 dev_dependencies:
