--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   another_flushbar: 
   flutter_highlight:
   flutter_html:
-  youtube_player_flutter: 
-  
+  youtube_player_flutter:
   
 
   flutter:
@@ -47,7 +46,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_vector_icons: ^1.0.0
+  flutter_vector_icons: ^2.0.0
   google_fonts:
   http:
   collection: ^1.17.0
@@ -56,7 +55,9 @@ dependencies:
   shared_preferences: ^2.2.0
   boxicons: ^2.1.3
   flutter_boxicons: ^3.0.0
+  flutter_svg: ^1.1.0
   intl: ^0.18.1
+  getwidget: ^2.0.4
   shimmer_effect: ^1.0.4
   image_picker: ^0.8.7+5
   share: ^2.0.0
@@ -94,6 +95,7 @@ flutter:
     - assets/demoAPI.json
     - assets/bookmarkAPI.json
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
