--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mindplex_app">
+    package="com.singularitynet.mindplex">
    <application
-        android:label="mindplex_app"
+        android:label="mindplex"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
