--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,9 +45,16 @@ android {
         versionName flutterVersionName
         multiDexEnabled true
     }
-
+    signingConfigs{
+        debug{
+            keyAlias 'keystorealias'
+            keyPassword 'android'
+            storeFile file('mykeystore.jks')
+            storePassword 'android' 
+        }
+    }
     buildTypes {
-        release {
+        debug {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
