--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   badges:
   font_awesome_flutter: ^10.6.0
   flutter_cache_manager:
+  date_count_down: ^3.0.0
   
 
   
@@ -99,8 +100,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/demoAPI.json
-    - assets/bookmarkAPI.json
     - assets/images/
     - assets/icons/
 
