--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   boxicons: ^2.1.3
   flutter_boxicons: ^3.0.0
   flutter_svg: ^1.1.0
-  intl: ^0.19.0
+  intl: 
   shimmer_effect: ^1.0.4
   image_picker: ^0.8.7+5
   share: ^2.0.0
@@ -67,6 +67,9 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   flutter_cache_manager:
   date_count_down: ^3.0.0
+  flutter_quill: ^9.3.1
+  delta_to_html: ^0.2.2
+  # quill_html_converter:
   
 
   
