--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,6 @@ dependencies:
   collection: ^1.17.0
   transparent_image: ^2.0.1
   cached_network_image: ^3.3.0
-  shared_preferences: ^2.2.0
-  boxicons: ^2.1.3
-  flutter_boxicons: ^3.0.0
   flutter_svg: ^1.1.0
   intl: 
   shimmer_effect: ^1.0.4
@@ -69,6 +66,7 @@ dependencies:
   date_count_down: ^3.0.0
   flutter_quill: ^9.3.1
   delta_to_html: ^0.2.2
+  awesome_dialog: ^3.2.0
   # quill_html_converter:
   
 
